data/derived/fa15/progs/unify/prog4020.ml.out
Characters 68-85:
  | h::t -> if h = ((listReverse x))
                   ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
